--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   post:8080
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 50MB
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
