--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234
-    url: jdbc:mysql://localhost:3306/stuls_test?serverTimezone=Asia/Seoul&charactorEncoding=UTF-8
+    password: Hong167609!
+    url: jdbc:mysql://localhost:3306/boardsample?serverTimezone=Asia/Seoul&charactorEncoding=UTF-8
 
   thymeleaf:
     cache: false
