--- a/board/build.gradle
+++ b/board/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 추가
+    implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('bootBuildImage') {
